fix spacing

--- a/index.css
+++ b/index.css
@@ -35,9 +35,10 @@ body {
 }
 
 .avatar {
-    width: 100px;
+    width: 90px;
     border-radius: 50%;
     margin: 0;
+    padding: 10px;
 }
 
 .card-content {
@@ -70,7 +71,7 @@ body {
 
 .socials {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     justify-content: center;
     flex-direction: column;
     width: 100%;
